# python-project-140

./: .gitignore  Makefile  README.md  demo.cast  demo1.cast  demo2.cast  pyproject.toml
brain_games/: calc.py  cli.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
